--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,21 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <form class="search-form" id="search-form">
+      <input
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+      />
+      <button class="search-button" type="submit"></button>
+    </form>
+
+    <div class="gallery"></div>
+
+    <button type="button" class="load-more">Load more</button>
+
+    <!-- ❗️❗️❗️ Add partials like so for every page
+    <include src="./partials/serch.html"></include> -->
   </body>
 </html>
